--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,4 @@ steps:
    docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
     docker push $(dockerId).azurecr.io/$(imageName)
   env:
-    pswd: $(dockerPassword) 
-  displayName: 'docker build'
+    pswd: wPeL+baFwdvD5d3IZJqzqu4ZKt8MoxGW
