--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,12 +10,13 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 variables:
-  imageName: 'your-container-image-name:$(build.buildId)'
-  dockerId: TestCD
+  dockerId: my-docker-id  # Replace with your Docker ID for Docker Hub or the admin user name for the Azure Container Registry
+  imageName: my-image-name  # Replace with the name of the image you want to publish
 
 steps:
-- script: docker build -f Dockerfile -t $(imageName) .
-   docker login -u $(dockerId) -p 'wPeL+baFwdvD5d3IZJqzqu4ZKt8MoxGW' $(dockerId).azurecr.io
+- script: |
+    docker build -t $(dockerId).azurecr.io/$(imageName) .
+    docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
     docker push $(dockerId).azurecr.io/$(imageName)
   env:
-    pswd: wPeL+baFwdvD5d3IZJqzqu4ZKt8MoxGW
+    pswd: $(dockerPassword)        # Define dockerPassword in the Variables tab of this pipeline in Pipelines page of web interface
