--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,11 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 variables:
-  dockerId: TestCD  # Replace with your Docker ID for Docker Hub or the admin user name for the Azure Container Registry
-  imageName: my-image-name  # Replace with the name of the image you want to publish
-
+  dockerId: password  # Replace with your Docker ID for Docker Hub or the admin user name for the Azure Container Registry
+  imageName: testcdsc  # Replace with the name of the image you want to publish
+  pswd: "wPeL+baFwdvD5d3IZJqzqu4ZKt8MoxGW"
 steps:
 - script: |
     docker build -t $(dockerId).azurecr.io/$(imageName) .
     docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
     docker push $(dockerId).azurecr.io/$(imageName)
-  env:
-    pswd: "wPeL+baFwdvD5d3IZJqzqu4ZKt8MoxGW"        # Define dockerPassword in the Variables tab of this pipeline in Pipelines page of web interface
