Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
   displayName: 'publish yaml folder as an artifact'
   inputs:
     artifactName: 'yaml'
-    pathToPublish: .
+    pathToPublish: 'yaml'
