--- a/yaml/kubernetes.yaml
+++ b/yaml/kubernetes.yaml
@@ -18,7 +18,7 @@ spec:
         ports:
         - containerPort: 8080
      imagePullSecrets:
-      - name: acr-auth
+      - name: acrauth
 apiVersion: v1
 kind: Service
 metadata:
